# predictr-cli

./: .gitignore  LICENSE  README.md  bitbucket-pipelines.yml  pyproject.toml
src/pebbles/: __init__.py  __main__.py  cli.py  client.py
src/pebbles/commands/: _helpers.py  connections.py  datasets.py  mba.py  meta.py  models.py  rfm.py  salesforecast.py  workflows.py
src/predictr_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  input.py  output.py
src/predictr_cli/commands/: _helpers.py  connections.py  datasets.py  forecast.py  mba.py  meta.py  models.py  rfm.py  salesforecast.py  workflows.py
tests/: test_cli.py  test_client.py  test_config.py  test_input.py
